--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -31,3 +31,18 @@ body:
         link to images etc, 
     validations:
       required: false
+  - type: dropdown
+    id: version
+    attributes:
+      label: Version
+      description: What minecraft version where you using?
+      options:
+        - 1.20
+        - 1.20.1
+        - 1.20.2
+        - 1.20.3
+        - 1.20.4
+        - 1.20.5
+      default: 1
+    validations:
+      required: true
